--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Re Zhihu Daily</string>
+    <string name="app_name">知乎日报</string>
+    <string name="untitled">untitled</string>
+    <string name="mystar">我的收藏</string>
+    <string name="offline">离线查看</string>
 </resources>
